--- a/open_data_version/bte2.ipynb
+++ b/open_data_version/bte2.ipynb
@@ -19,7 +19,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "We are very grateful to those who have deposited data in open databases to make this reproducibility possible."
    ]
@@ -183,7 +182,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "# titl\n",
-    "plt.title(\"High G>A clusters by year in open data\")\n",
+    "plt.title(\"High G>A branches by year in open data\")\n",
     "# plot\n",
     "sns.barplot(x=list(year_counter.keys()), y=list(year_counter.values()))\n",
     "# show\n",
