--- a/open_data_version/bte2.ipynb
+++ b/open_data_version/bte2.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are not permitted to redistribute mutation-annotated trees that include GISAID data (which we analyse in the paper). Therefore, here we provide an alternative version that performs the core year-based analysis using just open data from the INSDC databases (from a more limited range of countries). We have built this version with a new approach using the [Big Tree Explorer](https://github.com/jmcbroome/BTE). We will add open-source versions of further analyses in the future."
+    "We are not permitted to redistribute mutation-annotated trees that include GISAID data (which we analyse in the paper). Therefore, here we provide an alternative version that performs the core year-based analysis using just open data from the INSDC databases (from a more limited range of countries). We have built this version with a new approach using the [Big Tree Explorer](https://github.com/jmcbroome/BTE) -- the version in the current manuscript uses a modified version of Taxonium tools, but will be updated to match. We will add open-source versions of further analyses in the future."
    ]
   },
   {
