--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -270,16 +270,7 @@
       "378 [] placebo\n",
       "d5 not in records SRR19914803\n",
       "380 [(240, 'C', 'T', Seq('TCG'))] placebo\n",
-      "[(240, 4), (23598, 2), (13501, 1), (10424, 1), (16522, 1), (18815, 1), (23120, 1), (28115, 1), (18651, 1), (1230, 1)]\n",
-      "molnupiravir\n",
-      "[(('C', 'T'), 21), (('G', 'A'), 21), (('G', 'T'), 14), (('T', 'C'), 11), (('A', 'G'), 8), (('A', 'T'), 1), (('T', 'A'), 1), (('T', 'G'), 1)]\n",
-      "[(Seq('TGT'), 11), (Seq('ACA'), 6), (Seq('AGT'), 4), (Seq('TGC'), 4), (Seq('TGA'), 4), (Seq('GGT'), 3), (Seq('GCA'), 3), (Seq('CTG'), 3), (Seq('ACT'), 3), (Seq('TCA'), 3), (Seq('CGA'), 2), (Seq('TAA'), 2), (Seq('AGG'), 2), (Seq('AGA'), 2), (Seq('AAT'), 2), (Seq('TTC'), 2), (Seq('GTG'), 2), (Seq('AAA'), 2), (Seq('ACC'), 2), (Seq('ACG'), 2), (Seq('CCG'), 1), (Seq('GCG'), 1), (Seq('CAT'), 1), (Seq('GTT'), 1), (Seq('TCT'), 1), (Seq('TAT'), 1), (Seq('TTT'), 1), (Seq('GGG'), 1), (Seq('GAA'), 1), (Seq('TCG'), 1), (Seq('GGC'), 1), (Seq('CGC'), 1), (Seq('TGG'), 1), (Seq('CAG'), 1)]\n",
-      "[(False, 44), (True, 34)]\n",
-      "placebo\n",
-      "[(('G', 'T'), 4), (('C', 'T'), 4), (('T', 'C'), 4), (('A', 'G'), 2), (('G', 'A'), 1)]\n",
-      "[(Seq('ACA'), 3), (Seq('GGC'), 2), (Seq('AAG'), 2), (Seq('ACT'), 1), (Seq('GTA'), 1), (Seq('ATG'), 1), (Seq('TGT'), 1), (Seq('AGA'), 1), (Seq('GGA'), 1), (Seq('ATA'), 1), (Seq('TTA'), 1)]\n",
-      "[(False, 11), (True, 4)]\n",
-      "Counter({'molnupiravir': 86, 'placebo': 86})\n"
+      "[(240, 4), (23598, 2), (13501, 1), (10424, 1), (16522, 1), (18815, 1), (23120, 1), (28115, 1), (18651, 1), (1230, 1)]\n"
      ]
     }
    ],
@@ -346,12 +337,83 @@
     "for drug, muts in muts_by_drug.items():\n",
     "    muts_by_drug[drug] = [m for m in muts if m[0] not in multiple_times]\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\\TOTALS ANALYSIS\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/29/cygttqzs4gq3vzhzg230d9pr0000gn/T/ipykernel_15487/706917553.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/29/cygttqzs4gq3vzhzg230d9pr0000gn/T/ipykernel_15487/706917553.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/29/cygttqzs4gq3vzhzg230d9pr0000gn/T/ipykernel_15487/706917553.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/29/cygttqzs4gq3vzhzg230d9pr0000gn/T/ipykernel_15487/706917553.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/29/cygttqzs4gq3vzhzg230d9pr0000gn/T/ipykernel_15487/706917553.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/29/cygttqzs4gq3vzhzg230d9pr0000gn/T/ipykernel_15487/706917553.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/29/cygttqzs4gq3vzhzg230d9pr0000gn/T/ipykernel_15487/706917553.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/29/cygttqzs4gq3vzhzg230d9pr0000gn/T/ipykernel_15487/706917553.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/29/cygttqzs4gq3vzhzg230d9pr0000gn/T/ipykernel_15487/706917553.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/29/cygttqzs4gq3vzhzg230d9pr0000gn/T/ipykernel_15487/706917553.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/29/cygttqzs4gq3vzhzg230d9pr0000gn/T/ipykernel_15487/706917553.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/29/cygttqzs4gq3vzhzg230d9pr0000gn/T/ipykernel_15487/706917553.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/29/cygttqzs4gq3vzhzg230d9pr0000gn/T/ipykernel_15487/706917553.py:9: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/Users/theosanderson/miniconda3/envs/py310/lib/python3.10/site-packages/plotnine/ggplot.py:718: PlotnineWarning: Saving 5 x 5 in image.\n",
+      "/Users/theosanderson/miniconda3/envs/py310/lib/python3.10/site-packages/plotnine/ggplot.py:719: PlotnineWarning: Filename: mutations_by_drug.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
     "# divide the G->A mutations by their context for each drug\n",
-    "print(\"\\n\\nCONTEXT ANALYSIS\")\n",
-    "for drug, muts in muts_by_drug.items():\n",
-    "    print(drug)\n",
-    "    print(Counter([m[3] for m in muts if m[1] == \"G\" and m[2] == \"A\"]).most_common())\n",
-    "    \n",
+    "print(\"\\n\\TOTALS ANALYSIS\")\n",
+    "by_mut_type = {k: Counter([f\"{m[1]}>{m[2]}\" for m in muts]).most_common() for k, muts in muts_by_drug.items()}\n",
+    "from plotnine import *\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame()\n",
+    "for drug, muts in by_mut_type.items():\n",
+    "    for mut in muts:\n",
+    "        df = df.append({\"drug\": drug\n",
+    "                        , \"mutation\": mut[0]\n",
+    "                        , \"count\": mut[1]\n",
+    "                          }, ignore_index=True)\n",
+    "# add in the zero values with expand_grid\n",
+    "from itertools import product\n",
+    "df = df.merge(pd.DataFrame(list(product(df[\"drug\"].unique(), df[\"mutation\"].unique())), columns=[\"drug\", \"mutation\"]), how=\"outer\")\n",
+    "df[\"count\"] = df[\"count\"].fillna(0)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# plot the mutations by drug with bar\n",
+    "p = (ggplot(df, aes(fill=\"drug\", y=\"count\", x=\"mutation\"))\n",
+    "    + geom_bar(stat=\"identity\", position=\"dodge\")\n",
+    "    + theme_classic() + labs(x=\"Mutation type\", y=\"Times observed\", fill = \"Drug\"))\n",
+    "\n",
+    "p.save(\"mutations_by_drug.pdf\", width=5, height=5, units=\"in\", dpi=300)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def is_mut_of_interest(start,end, context):\n",
     "    # g>a in the context of tgt\n",
@@ -499,7 +561,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.6 ('nextstrain')",
+   "display_name": "py310",
    "language": "python",
    "name": "python3"
   },
@@ -513,12 +575,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.10.8 (main, Nov 24 2022, 08:08:27) [Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ed9fb68640e5f6c1e5873b4a3f2f87a61c72f5f8fbb68d62d1f9c0014e667be1"
+    "hash": "c8d440e3959747bf1e99f498e2fad430a3012487f32fa421a32f347fc0778ddc"
    }
   }
  },
